差分のコミット

--- a/DevOpsplayground/config/DevOps-study-app-1/config/project-scratch-def.json
+++ b/DevOpsplayground/config/DevOps-study-app-1/config/project-scratch-def.json
@@ -1,5 +1,5 @@
 {
-  "orgName": "my company",
+  "orgName": "hashimotohana company",
   "edition": "Developer",
   "features": ["EnableSetPasswordInApi"],
   "settings": {
