--- a/DevOpsplayground/config/DevOps-study-app-1/sfdx-project.json
+++ b/DevOpsplayground/config/DevOps-study-app-1/sfdx-project.json
@@ -5,8 +5,8 @@
       "default": true
     }
   ],
-  "name": "dx-empty",
+  "name": "DevOps-study-app-1",
   "namespace": "",
   "sfdcLoginUrl": "https://login.salesforce.com",
-  "sourceApiVersion": "59.0"
+  "sourceApiVersion": "62.0"
 }
